--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "YOUR_GITHUB_USERNAME",
+        "owner": "musabhc",
         "repo": "balance-track"
       }
     ]
